--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
 <body>
 
   <div class="chat-container">
-    <h1 class="header">Lendly VertexAi</h1>
+    <h1 class="header">Lendly VertexAi Chatbot</h1>
     <form class="chat-form" id="chat-form">
       <br></br>
       <br></br>
